--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
     "env": {
-        "node": true,
-        "es2021": true
+        "node": true
     },
     "extends": "eslint:recommended",
     "overrides": [
     ],
     "parserOptions": {
-        "ecmaVersion": "latest",
+        "ecmaVersion": "2017",
         "sourceType": "module"
     },
     "rules": {
